tests/negative/test_data_elem_cn.orb
data Foo {
    x:(i32 cn)
};

fnc main () () {};